# insightmesh-ai

./: .dockerignore  .editorconfig  .env.example  .gitignore  CLAUDE.md  Dockerfile.backend  Dockerfile.frontend  Makefile  README.md  _export_featured.py  _precache.py  _precache_manifest.json  _precache_prod.py  dev.ps1  docker-compose.yml  pyproject.toml  railway.json  requirements.txt  run_body.json  run_body_tesla.json
.claude/: settings.local.json
.github/workflows/: ci.yml
backend/: main.py
backend/api/: routes.py
backend/api/endpoints/: __init__.py  analyze_reviews.py  appstore_scraper.py  forecast.py  reddit_scraper.py  scrape_reviews.py  understand.py
backend/api/insightmesh/: __init__.py  _init_.py  ask.py  categorize.py  debate.py  demo.py  discover.py  export.py  history.py  orchestrator.py  paste.py  plugins.py  priorities.py  run_pipeline.py  scrape.py  scraper_config.py  stream.py
backend/core/: forecast_engine.py
backend/data/processed/: .gitkeep
backend/data/raw/: .gitkeep
backend/insight/: __init__.py  py.typed
backend/insight/absa/: aspect_sentiment.py
backend/insight/actions/: suggester.py
backend/insight/counterfactual/: impact.py
backend/insight/coverage/: __init__.py  coverage_map.py
backend/insight/debate/: __init__.py  engine.py  evidence_store.py
backend/insight/deep_classify/: __init__.py  _ps5_smoke_test.py  classifier.py
backend/insight/effort/: scorer.py
backend/insight/filters/: __init__.py  relevance.py
backend/insight/forecast/: sentiment_predict.py
backend/models/: schemas.py
backend/utils/: astroturf.py  auth.py  cache.py  column_guesser.py  db.py  file_loader.py  filtering.py  llm.py  logging_config.py  quality.py  ratelimit.py  roadmap.py
docs/: CLAUDE_ONBOARDING.md  OLLAMA_SETUP.md  PRODUCTION.md
insightmesh-fe/: README.md  index.html  package-lock.json  package.json  vite.config.js
insightmesh-fe/src/: App.css  App.jsx  api.js  featured.js  index.css
tests/: README.md  conftest.py  test_api_smoke.py  test_cache.py  test_cluster.py  test_column_guesser.py  test_db.py  test_filtering.py  test_relevance.py
(+57 files in other folders)
